Optimize corruption ; Set night during corruption ; Add corruption speed, pause & bps settings